logs/plugins/s/simple-ip-ban/jspi-boot/error.log
file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/cli/index.js:237
        throw new Error(y, { cause: u });
              ^

Error: [24-Apr-2025 06:39:16 UTC] PHP Fatal error:  Uncaught TypeError: error_reporting(): Argument #1 ($error_level) must be of type ?int, string given in /wordpress/wp-content/plugins/super-easy-testimonials/index.php:2
Stack trace:
#0 /wordpress/wp-content/plugins/super-easy-testimonials/index.php(2): error_reporting('E_ALL')
#1 /wordpress/wp-admin/includes/plugin.php(2387): include_once('/wordpress/wp-c...')
#2 /wordpress/wp-admin/includes/plugin.php(673): plugin_sandbox_scrape('super-easy-test...')
#3 /internal/eval.php(20): activate_plugin('super-easy-test...')
#4 {main}
  thrown in /wordpress/wp-content/plugins/super-easy-testimonials/index.php on line 2
[24-Apr-2025 06:39:24 UTC] PHP Fatal error:  Uncaught TypeError: error_reporting(): Argument #1 ($error_level) must be of type ?int, string given in /wordpress/wp-content/plugins/super-easy-testimonials/index.php:2
Stack trace:
#0 /wordpress/wp-content/plugins/super-easy-testimonials/index.php(2): error_reporting('E_ALL')
#1 /wordpress/wp-admin/includes/plugin.php(2387): include_once('/wordpress/wp-c...')
#2 /wordpress/wp-admin/includes/plugin.php(673): plugin_sandbox_scrape('super-easy-test...')
#3 /internal/eval.php(20): activate_plugin('super-easy-test...')
#4 {main}
  thrown in /wordpress/wp-content/plugins/super-easy-testimonials/index.php on line 2
[24-Apr-2025 06:39:32 UTC] PHP Fatal error:  Uncaught TypeError: error_reporting(): Argument #1 ($error_level) must be of type ?int, string given in /wordpress/wp-content/plugins/super-easy-testimonials/index.php:2
Stack trace:
#0 /wordpress/wp-content/plugins/super-easy-testimonials/index.php(2): error_reporting('E_ALL')
#1 /wordpress/wp-admin/includes/plugin.php(2387): include_once('/wordpress/wp-c...')
#2 /wordpress/wp-admin/includes/plugin.php(673): plugin_sandbox_scrape('super-easy-test...')
#3 /internal/eval.php(20): activate_plugin('super-easy-test...')
#4 {main}
  thrown in /wordpress/wp-content/plugins/super-easy-testimonials/index.php on line 2
[24-Apr-2025 06:41:29 UTC] PHP Fatal error:  Uncaught Error: Call to undefined function post_exists() in /wordpress/wp-content/plugins/sell-digital-downloads/start.php:278
Stack trace:
#0 /wordpress/wp-content/plugins/sell-digital-downloads/start.php(299): WordPress_iSell->check_create_page('error_page', Array)
#1 /wordpress/wp-includes/class-wp-hook.php(324): WordPress_iSell->plugin_activate(false)
#2 /wordpress/wp-includes/class-wp-hook.php(348): WP_Hook->apply_filters('', Array)
#3 /wordpress/wp-includes/plugin.php(517): WP_Hook->do_action(Array)
#4 /wordpress/wp-admin/includes/plugin.php(703): do_action('activate_sell-d...', false)
#5 /internal/eval.php(20): activate_plugin('sell-digital-do...')
#6 {main}
  thrown in /wordpress/wp-content/plugins/sell-digital-downloads/start.php on line 278
[24-Apr-2025 06:41:37 UTC] PHP Fatal error:  Uncaught Error: Call to undefined function post_exists() in /wordpress/wp-content/plugins/sell-digital-downloads/start.php:278
Stack trace:
#0 /wordpress/wp-content/plugins/sell-digital-downloads/start.php(299): WordPress_iSell->check_create_page('error_page', Array)
#1 /wordpress/wp-includes/class-wp-hook.php(324): WordPress_iSell->plugin_activate(false)
#2 /wordpress/wp-includes/class-wp-hook.php(348): WP_Hook->apply_filters('', Array)
#3 /wordpress/wp-includes/plugin.php(517): WP_Hook->do_action(Array)
#4 /wordpress/wp-admin/includes/plugin.php(703): do_action('activate_sell-d...', false)
#5 /internal/eval.php(20): activate_plugin('sell-digital-do...')
#6 {main}
  thrown in /wordpress/wp-content/plugins/sell-digital-downloads/start.php on line 278
[24-Apr-2025 06:41:46 UTC] PHP Fatal error:  Uncaught Error: Call to undefined function post_exists() in /wordpress/wp-content/plugins/sell-digital-downloads/start.php:278
Stack trace:
#0 /wordpress/wp-content/plugins/sell-digital-downloads/start.php(299): WordPress_iSell->check_create_page('error_page', Array)
#1 /wordpress/wp-includes/class-wp-hook.php(324): WordPress_iSell->plugin_activate(false)
#2 /wordpress/wp-includes/class-wp-hook.php(348): WP_Hook->apply_filters('', Array)
#3 /wordpress/wp-includes/plugin.php(517): WP_Hook->do_action(Array)
#4 /wordpress/wp-admin/includes/plugin.php(703): do_action('activate_sell-d...', false)
#5 /internal/eval.php(20): activate_plugin('sell-digital-do...')
#6 {main}
  thrown in /wordpress/wp-content/plugins/sell-digital-downloads/start.php on line 278
[24-Apr-2025 06:41:55 UTC] PHP Warning:  Undefined array key "REMOTE_ADDR" in /wordpress/wp-content/plugins/simple-ip-ban/ip-ban.php on line 127
[24-Apr-2025 06:41:55 UTC] PHP Warning:  Undefined array key "HTTP_USER_AGENT" in /wordpress/wp-content/plugins/simple-ip-ban/ip-ban.php on line 128
[24-Apr-2025 06:42:04 UTC] PHP Warning:  Undefined array key "REMOTE_ADDR" in /wordpress/wp-content/plugins/simple-ip-ban/ip-ban.php on line 127
[24-Apr-2025 06:42:04 UTC] PHP Warning:  Undefined array key "HTTP_USER_AGENT" in /wordpress/wp-content/plugins/simple-ip-ban/ip-ban.php on line 128
[24-Apr-2025 06:42:12 UTC] PHP Warning:  Undefined array key "REMOTE_ADDR" in /wordpress/wp-content/plugins/simple-ip-ban/ip-ban.php on line 127
[24-Apr-2025 06:42:12 UTC] PHP Warning:  Undefined array key "HTTP_USER_AGENT" in /wordpress/wp-content/plugins/simple-ip-ban/ip-ban.php on line 128

    at Object.onBind (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/cli/index.js:237:15)
    at process.processTicksAndRejections (node:internal/process/task_queues:105:5)
    at async V (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/cli/index.js:64:10)
    at async ja (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/cli/cli.js:8161:12) {
  [cause]: Error: Error when executing the blueprint step #1 ({"step":"installPlugin","pluginData":{"resource":"wordpress.org/plugins","slug":"simple-ip-ban"},"options":{"activate":true}}) : Plugin /wordpress/wp-content/plugins/simple-ip-ban could not be activated – WordPress exited with no error. Sometimes, when $_SERVER or site options are not configured correctly, WordPress exits early with a 301 redirect. Inspect the "debug" logs in the console for more details.
      at Object.run (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/blueprints/index.js:12449:19)
      at process.processTicksAndRejections (node:internal/process/task_queues:105:5)
      at async ms (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/blueprints/index.js:12552:3)
      ... 2 lines matching cause stack trace ...
      at async ja (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/cli/cli.js:8161:12) {
    [cause]: Error: Plugin /wordpress/wp-content/plugins/simple-ip-ban could not be activated – WordPress exited with no error. Sometimes, when $_SERVER or site options are not configured correctly, WordPress exits early with a 301 redirect. Inspect the "debug" logs in the console for more details.
        at wr (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/blueprints/index.js:119:51)
        at process.processTicksAndRejections (node:internal/process/task_queues:105:5)
        at async Object.gt [as installPlugin] (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/blueprints/index.js:974:42)
        at async g (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/blueprints/index.js:12517:30)
        at async Object.run (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/blueprints/index.js:12446:23)
        at async ms (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/blueprints/index.js:12552:3)
        at async Object.onBind (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/cli/index.js:227:48)
        at async V (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/cli/index.js:64:10)
        at async ja (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/cli/cli.js:8161:12)
  }
}

Node.js v23.11.0
